	PR ipa/63576 	* ipa-utils.c (ipa_merge_profiles): Merge speculative edges.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@219910 138bc75d-0d04-0410-961f-82ee72b054a4